// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Avatar > orange variant > matches snapshot with orange variant and outline type 1`] = `
<div
  aria-label="Jane Doe"
  class="inline-flex items-center justify-center overflow-clip bg-white dark:bg-black w-12 rounded-theme-md border border-orange-100 dark:border-orange-700 bg-white dark:bg-black"
  data-id="sds-avatar"
  role="img"
>
  <span
    class="flex items-center justify-center leading-none text-black cursor-default uppercase text-xl font-regular text-orange-600 dark:text-orange-400 w-12 aspect-[4/5]"
    title="Jane Doe"
  >
    <span>
      JD
    </span>
  </span>
</div>
`;

exports[`Avatar > orange variant > matches snapshot with orange variant and subtle type 1`] = `
<div
  aria-label="Jane Doe"
  class="inline-flex items-center justify-center overflow-clip bg-orange-50 dark:bg-orange-900 w-12 rounded-theme-md"
  data-id="sds-avatar"
  role="img"
>
  <span
    class="flex items-center justify-center leading-none text-black cursor-default uppercase text-xl font-regular text-orange-600 dark:text-orange-400 w-12 aspect-[4/5]"
    title="Jane Doe"
  >
    <span>
      JD
    </span>
  </span>
</div>
`;

exports[`Avatar > outline type > matches snapshot with outline type and blue variant 1`] = `
<div
  aria-label="Jane Doe"
  class="inline-flex items-center justify-center overflow-clip bg-white dark:bg-black w-12 rounded-theme-md border border-blue-200 dark:border-blue-700 bg-white dark:bg-black"
  data-id="sds-avatar"
  role="img"
>
  <span
    class="flex items-center justify-center leading-none text-black cursor-default uppercase text-xl font-regular text-blue-600 dark:text-blue-400 w-12 aspect-[4/5]"
    title="Jane Doe"
  >
    <span>
      JD
    </span>
  </span>
</div>
`;

exports[`Avatar > should match its default snapshot 1`] = `
<div
  aria-label="Avatar"
  class="inline-flex items-center justify-center overflow-clip bg-blue-50 dark:bg-blue-900 w-12 rounded-theme-md"
  data-id="sds-avatar"
  role="img"
>
  <span
    class="flex items-center justify-center leading-none text-black cursor-default uppercase text-xl font-regular text-blue-600 dark:text-blue-400 w-12 aspect-[4/5]"
    title=""
  >
    <span />
  </span>
</div>
`;

exports[`Avatar > should match its variant: red, size: lg, shape: circle, name: Matt Winwood, and src snapshot 1`] = `
<div
  aria-label="Matt Winwood"
  class="inline-flex items-center justify-center overflow-clip bg-red-100 dark:bg-red-900 w-16 rounded-full"
  data-id="sds-avatar"
  role="img"
>
  <div
    class="bg-cover bg-center w-16 aspect-square"
    style="background-image: url("https://seinet.sei.cmu.edu/api/photos/mrwinwood?full=true");"
    title="Matt Winwood"
  />
</div>
`;

exports[`Avatar > variant: blue, position: right, shape: portrait, size: md, name: Brandon Jabout, and src 1`] = `
<div
  aria-label="Brandon Jabout"
  class="inline-flex items-center justify-center overflow-clip bg-blue-50 dark:bg-blue-900 w-12 rounded-theme-md"
  data-id="sds-avatar"
  role="img"
>
  <div
    class="bg-cover bg-right w-12 aspect-[4/5]"
    style="background-image: url("https://seinet.sei.cmu.edu/api/photos/bjabout?full=true");"
    title="Brandon Jabout"
  />
</div>
`;

exports[`Avatar > variant: gray, position: bottom, shape: circle, size: md, name: Brandon Jabout, and src 1`] = `
<div
  aria-label="Brandon Jabout"
  class="inline-flex items-center justify-center overflow-clip bg-gray-100 dark:bg-gray-850 w-12 rounded-full"
  data-id="sds-avatar"
  role="img"
>
  <div
    class="bg-cover bg-bottom w-12 aspect-square"
    style="background-image: url("https://seinet.sei.cmu.edu/api/photos/bjabout?full=true");"
    title="Brandon Jabout"
  />
</div>
`;

exports[`Avatar > variant: green, position: left, shape: circle, size: xs, name: Brandon Jabout, and src 1`] = `
<div
  aria-label="Brandon Jabout"
  class="inline-flex items-center justify-center overflow-clip bg-green-50 dark:bg-green-900 w-6 rounded-full"
  data-id="sds-avatar"
  role="img"
>
  <div
    class="bg-cover bg-left w-6 aspect-square"
    style="background-image: url("https://seinet.sei.cmu.edu/api/photos/bjabout?full=true");"
    title="Brandon Jabout"
  />
</div>
`;

exports[`Avatar > variant: purple, position: top, shape: portrait, size: md, name: Brandon Jabout, and src 1`] = `
<div
  aria-label="Brandon Jabout"
  class="inline-flex items-center justify-center overflow-clip bg-purple-100 dark:bg-purple-900 w-12 rounded-theme-md"
  data-id="sds-avatar"
  role="img"
>
  <div
    class="bg-cover bg-top w-12 aspect-[4/5]"
    style="background-image: url("https://seinet.sei.cmu.edu/api/photos/bjabout?full=true");"
    title="Brandon Jabout"
  />
</div>
`;

exports[`Avatar > variant: yellow, position: center, shape: circle, size: sm, name: Brandon Jabout, and src 1`] = `
<div
  aria-label="Brandon Jabout"
  class="inline-flex items-center justify-center overflow-clip bg-yellow-50 dark:bg-yellow-900 w-8 rounded-full"
  data-id="sds-avatar"
  role="img"
>
  <div
    class="bg-cover bg-center w-8 aspect-square"
    style="background-image: url("https://seinet.sei.cmu.edu/api/photos/bjabout?full=true");"
    title="Brandon Jabout"
  />
</div>
`;
